# coding-projects

./: README.md
ising-model/: IsingModel.ipynb
ising-model-magnets/: README.md  requirements.txt
nbody-code/: README.md  nbody_script.jl  nbody_script.py  nbody_script_cpu.py  nbody_script_cpu_v2.py  nbody_script_gpu.py  nbody_script_gpu_v2.py  packages.jl  python_requirements.txt  requirements.txt
nbody-code/nbody-rs/: .gitignore  Cargo.toml  mkvideo.sh
nbody-code/nbody-rs/src/: main.rs  nbody.rs  plotting.rs
