[package]
name = "nbody_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = ["derive"] }
kdam = "0.4.0"
nalgebra = "0.32.3"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
plotters = "0.3.5"
rand = "0.8.5"
rayon = "1.7.0"
