[package]
name = "nbody_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = ["derive"] }
color-eyre = "0.6.2"
kdam = { version = "0.4.0", features = ["rayon", "gradient", "template"] }
ndarray = { version = "0.15.6", features = ["rayon"] }
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.1"
plotpy = "0.4.0"
rand = "0.8.5"
rayon = "1.7.0"
